--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:theme="@style/Theme.Procure_Pro"
         tools:targetApi="31">
         <activity
+            android:name=".DeliveryManagement"
+            android:exported="false" />
+        <activity
+            android:name=".SupplierManagement"
+            android:exported="false" />
+        <activity
+            android:name=".ManagePurchase"
+            android:exported="false" />
+        <activity
+            android:name=".AddPurchase"
+            android:exported="false" />
+        <activity
             android:name=".Dashboard"
             android:exported="false" />
         <activity
